<resources>
    <string name="app_name">Appaca</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="alpaca_jump">Alpaca Jump</string>
    <string name="alpaca_jump_score_format">Score: %06d</string>
    <string name="alpaca_jump_high_score_format">High Score: %06d</string>
    <string name="play_again">Play Again</string>
    <string name="ok">OK</string>
    <string name="game_over">Game Over</string>
    <string name="you_win">You win!</string>
    <string name="top_to_start">Tap to Start!</string>
    <string name="hunger">Hunger</string>
    <string name="happiness">Happiness</string>
    <string name="hygiene">Hygiene</string>
    <string name="first_alpaca_title">Congratulations on your new alpaca!</string>
    <string name="first_alpaca_confirmation_button">Lets Go!</string>
    <string name="alpaca_name_field_hint">Name your Alpaca!</string>
    <string name="buy">Buy</string>
    <string name="cancel">Cancel</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="fruit_catch">Fruit Catch</string>
    <string name="fruit_catch_score_format">Score: %03d</string>
    <string name="fruit_catch_high_score_format">High Score: %03d</string>
    <string name="fruit_catch_misses_format">Misses: %d / %d</string>
    <string name="happiness_notification_name">Your alpaca is no longer happy!</string>
    <string name="alpaca_run">Alpaca Run</string>
    <string name="alpaca_run_score_format">Score: %03d</string>
    <string name="alpaca_run_high_score_format">High Score: %03d</string>
    <string name="minesweeper">Minesweeper</string>
    <string name="minesweeper_score_format">Score: %03d</string>
    <string name="minesweeper_high_score_format">High Score: %03d</string>
    <string name="webapi_base_url">https://dev.webapi.tinycountrygames.com</string>
    <string name="tcg_account_manage_page">https://tinycountrygames.com/tcgaccounts/manage/</string>
    <string name="tcg_account_signup_page">https://tinycountrygames.com/tcgaccounts/signup/</string>
    <string name="tcg_account_reset_page">https://tinycountrygames.com/tcgaccounts/reset/</string>
    <string name="settings">Settings</string>
    <string name="tcg_account">TCG Account</string>
    <string name="manage_account">Manage Account</string>
    <string name="log_out">Log Out</string>
    <string name="profile_image_content_desc">Profile Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="logging_in">Logging In...</string>
    <string name="error_icon">Error Icon</string>
    <string name="enter_a_username">Enter a username!</string>
    <string name="enter_a_password">Enter a password!</string>
    <string name="loading_account_details">Loading Account Details</string>
    <string name="upload_current_data_to_cloud">Upload Current Data to Cloud</string>
    <string name="please_login_to_continue">Please Login to Continue</string>
    <string name="data_management">Data Management</string>
    <string name="upload_data">Upload Data</string>
    <string name="download_data">Download Data</string>
    <string name="keep_latest">Keep Latest</string>
</resources>
