<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.settings.TCGAccountLoginFormFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/tcg_login_form_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/hud_padding" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/tcg_login_form_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/hud_padding"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/tcg_login_form_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/hud_padding"
        android:background="@drawable/stat_bar_inner_full"
        android:text="@string/login" />

    <LinearLayout
        android:id="@+id/tcg_login_form_logging_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/hud_padding"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_marginEnd="@dimen/hud_padding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/logging_in" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tcg_login_form_error_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/hud_padding"
        android:visibility="gone">

        <ImageView
            android:layout_width="@dimen/error_icon_size"
            android:layout_height="@dimen/error_icon_size"
            android:layout_marginEnd="@dimen/hud_padding"
            android:contentDescription="@string/error_icon"
            android:src="@drawable/ic_error_red_24dp" />

        <TextView
            android:id="@+id/tcg_login_form_error_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/tcg_login_form_signup_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_button_spacing"
            android:layout_weight="1"
            android:background="@drawable/stat_bar_inner_full"
            android:text="@string/sign_up" />

        <Button
            android:id="@+id/tcg_login_form_reset_pass_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/stat_bar_inner_full"
            android:text="@string/reset_password" />
    </LinearLayout>

</LinearLayout>