<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.settings.TCGAccountDetailsFragment">

    <LinearLayout
        android:id="@+id/tcg_details_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/hud_padding"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/tcg_details_profile_img"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:adjustViewBounds="true"
            android:contentDescription="@string/profile_image_content_desc" />

        <TextView
            android:id="@+id/tcg_details_username"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="0.75"
            android:gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tcg_details_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/hud_padding"
        android:orientation="horizontal">

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/hud_padding" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/loading_account_details" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/tcg_details_manage_account_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_button_spacing"
            android:layout_weight=".5"
            android:background="@drawable/stat_bar_inner_full"
            android:text="@string/manage_account" />

        <Button
            android:id="@+id/tcg_details_log_out_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:background="@drawable/stat_bar_inner_full"
            android:text="@string/log_out" />
    </LinearLayout>

</LinearLayout>